--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.555.0",
-    "next": "16.0.6",
+    "next": "^16.1.6",
     "next-intl": "^4.5.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
